syntax = "proto3";

option csharp_namespace = "GrpcServiceClient";

package greet;

// The service definition
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
  repeated string addresses = 2;
}
